--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <title>Elm Narrative Engine Editor</title>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
-
-        <title>Elm Narrative Engine Editor</title>
+        <link href="https://unpkg.com/tabulator-tables@4.5.3/dist/css/tabulator.min.css" rel="stylesheet">
+        <script type="text/javascript" src="https://unpkg.com/tabulator-tables@4.5.3/dist/js/tabulator.min.js"></script>
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/awesomplete/1.1.5/awesomplete.css" rel="stylesheet">
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/awesomplete/1.1.5/awesomplete.min.js"></script>
+        <style>
+            .tabulator-cell.tabulator-editing { overflow: visible; }
+            .awesomplete > ul { top: -5px; z-index: 99999; position: fixed; }
+        </style>
     </head>
     <body>
         <!-- Nav -->
@@ -18,9 +25,6 @@
                 <div class="navbar-nav mr-0 ml-auto">
                     <a class="nav-item nav-link" href="http://elmnarrativeengine.com/">About</a>
                     <a class="nav-item nav-link" href="https://package.elm-lang.org/packages/jschomay/elm-narrative-engine/latest/">Documentation</a>
-                    <button type="button" class="btn btn-info btn-sm" data-toggle="modal" data-target="#cheatsheetModal">
-                        Cheat Sheet
-                    </button>
                 </div>
             </div>
         </nav>
@@ -34,10 +38,19 @@
                 <li class="nav-item">
                     <a class="nav-link" id="rules-tab" data-toggle="tab" href="#rules" role="tab" aria-controls="rules" aria-selected="false">Rules</a>
                 </li>
+                <button class="nav-item nav-link btn btn-sm text-secondary mr-0 ml-auto" data-toggle="modal" data-target="#cheatsheetModal">Cheat Sheet</button>
             </ul>
             <div class="tab-content" id="myTabContent">
-                <div class="tab-pane fade show active" id="manifest" role="tabpanel" aria-labelledby="manifest-tab">manifest...</div>
-                <div class="tab-pane fade" id="rules" role="tabpanel" aria-labelledby="rules-tab">rules...</div>
+                <div class="tab-pane fade show active" id="manifest" role="tabpanel" aria-labelledby="manifest-tab">
+                    <!-- entities table -->
+                    <div id="manifest-table"></div>
+                    <button id="add-row-entities" type="button" class="btn btn-primary">Add row</button>
+                </div>
+                <div class="tab-pane fade" id="rules" role="tabpanel" aria-labelledby="rules-tab">
+                    <!-- rules table -->
+                    <div id="rules-table"></div>
+                    <button id="add-row-rules" type="button" class="btn btn-primary">Add row</button>
+                </div>
             </div>
         </div>
 
@@ -95,5 +108,6 @@ DO: PLAYER.current_location=CAVE.fear+1
 
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous" ></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous" ></script>
+        <script src="editor.js"></script>
     </body>
 </html>
