--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
         <link href="https://unpkg.com/tabulator-tables@4.5.3/dist/css/tabulator.min.css" rel="stylesheet">
         <script type="text/javascript" src="https://unpkg.com/tabulator-tables@4.5.3/dist/js/tabulator.min.js"></script>
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/awesomplete/1.1.5/awesomplete.css" rel="stylesheet">
-        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/awesomplete/1.1.5/awesomplete.min.js"></script>
+        <script type="text/javascript" src="textcomplete.js"></script>
         <style>
             .tabulator-cell.tabulator-editing { overflow: visible; }
-            .awesomplete > ul { top: -5px; z-index: 99999; position: fixed; }
+            .dropdown-menu li:hover, .dropdown-menu .active { background: gold; }
+            .tabulator-cell textarea { resize: none;}
+            .textcomplete-dropdown { top: auto; }
         </style>
     </head>
     <body>
