--- a/edit.html
+++ b/edit.html
@@ -120,31 +120,12 @@ DO: PLAYER.current_location=CAVE.fear+1
         <script src="https://www.gstatic.com/firebasejs/7.15.0/firebase-auth.js"></script>
         <script src="https://www.gstatic.com/firebasejs/7.15.0/firebase-firestore.js"></script>
 
-        <script>
-          // Your web app's Firebase configuration
-          var firebaseConfig = {
-            apiKey: "AIzaSyDQfqo0Lt4spcyNcW_lzLOSgrFmgZm1PNw",
-            authDomain: "ene-editor.firebaseapp.com",
-            databaseURL: "https://ene-editor.firebaseio.com",
-            projectId: "ene-editor",
-            storageBucket: "ene-editor.appspot.com",
-            messagingSenderId: "842435219703",
-            appId: "1:842435219703:web:a2027ebb0f0fd052a003f2",
-            measurementId: "G-66NEJ8LKGJ"
-          };
-          // Initialize Firebase
-          firebase.initializeApp(firebaseConfig);
-          // Initialize Analytics
-          // firebase.analytics();
-        </script>
-        <script>
-          window.ENE = {};
-          let status = document.querySelector("#cloud-status");
-          status.classList.remove("text-warning");
-          status.classList.add("text-success");
-          status.textContent = "Connected to cloud - " + firebase.app().options.projectId;
-        </script>
-        <script src="completion.js"></script>
+        <script src="firebase.js"></script>
+        <script src="authenticate.js"></script>
         <script src="editor.js"></script>
+        <script src="completion.js"></script>
+        <script>
+          window.onAuth = ENE.Editor.init;
+        </script>
     </body>
 </html>
