--- a/edit.html
+++ b/edit.html
@@ -28,6 +28,10 @@
                 <div class="navbar-nav mr-0 ml-auto">
                     <a class="nav-item nav-link" href="http://elmnarrativeengine.com/">About</a>
                     <a class="nav-item nav-link" href="https://package.elm-lang.org/packages/jschomay/elm-narrative-engine/latest/">Documentation</a>
+                    <div class="border-left border-light ml-2 pl-2 d-none" id="user-profile">
+                      <a href="/projects.html"><img width="40" height="40" class="rounded-circle" /></a>
+                      <a id="sign-out" class="nav-item nav-link d-inline" href="javascript:void(0)">Sign out</a>
+                    </div>
                 </div>
             </div>
         </nav>
@@ -57,7 +61,7 @@
                     <button id="add-row-rules" type="button" class="btn btn-primary">Add Rule</button>
                 </div>
             </div>
-            <em id="cloud-status" class="small float-right text-warning">Not connected to cloud</em>
+            <em id="cloud-status" class="small float-right text-warning">Offline</em>
         </div>
 
 
@@ -115,6 +119,7 @@ DO: PLAYER.current_location=CAVE.fear+1
 
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous" ></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous" ></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/blueimp-md5/2.17.0/js/md5.min.js" integrity="sha512-Hmp6qDy9imQmd15Ds1WQJ3uoyGCUz5myyr5ijainC1z+tP7wuXcze5ZZR3dF7+rkRALfNy7jcfgS5hH8wJ/2dQ==" crossorigin="anonymous"></script>
         <script src="https://www.gstatic.com/firebasejs/7.15.0/firebase-app.js"></script>
         <script src="https://www.gstatic.com/firebasejs/7.15.0/firebase-analytics.js"></script>
         <script src="https://www.gstatic.com/firebasejs/7.15.0/firebase-auth.js"></script>
