show saving indicator on add/edit/delete
includes refactor into edit event handler functions

--- a/edit.html
+++ b/edit.html
@@ -46,7 +46,8 @@
                 <li class="nav-item">
                     <a class="nav-link" id="rules-tab" data-toggle="tab" href="#rules" role="tab" aria-controls="rules" aria-selected="false">Rules</a>
                 </li>
-                <button class="nav-item nav-link btn btn-sm text-secondary mr-0 ml-auto" data-toggle="modal" data-target="#cheatsheetModal">Cheat Sheet</button>
+                <li id="save-indicator" class="small fade ml-auto mr-auto px-3 py-2">xxx</li>
+                <button class="nav-item nav-link btn btn-sm text-secondary ml-auto mr-0" data-toggle="modal" data-target="#cheatsheetModal">Cheat Sheet</button>
             </ul>
 
             <div class="tab-content" id="myTabContent">
