--- a/edit.html
+++ b/edit.html
@@ -8,6 +8,7 @@
         <link href="https://unpkg.com/tabulator-tables@4.5.3/dist/css/tabulator.min.css" rel="stylesheet">
         <script type="text/javascript" src="https://unpkg.com/tabulator-tables@4.5.3/dist/js/tabulator.min.js"></script>
         <script type="text/javascript" src="textcomplete.min.js"></script>
+        <script type="text/javascript" src="elm-code/syntax-validator.js"></script>
         <style>
             .tabulator-cell.tabulator-editing { overflow: visible; }
             .dropdown-menu li:hover, .dropdown-menu .active { background: gold; }
