--- a/preview.html
+++ b/preview.html
@@ -10,7 +10,7 @@
     <body>
         <!-- Nav -->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
-            <a href="/" class="navbar-brand">Elm Narrative Engine Platform</a>
+            <a href="index.html" class="navbar-brand">Elm Narrative Engine Platform</a>
             <span id="project-title" class="navbar-text"></span>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -21,7 +21,7 @@
                     <a class="nav-item nav-link" href="http://elmnarrativeengine.com/">About</a>
                     <a class="nav-item nav-link" href="https://package.elm-lang.org/packages/jschomay/elm-narrative-engine/latest/">Documentation</a>
                     <div class="border-left border-light ml-2 pl-2 d-none" id="user-profile">
-                      <a href="/projects.html"><img width="40" height="40" class="rounded-circle" /></a>
+                      <a href="projects.html"><img width="40" height="40" class="rounded-circle" /></a>
                       <a id="sign-out" class="nav-item nav-link d-inline" href="javascript:void(0)">Sign out</a>
                     </div>
                 </div>
