--- a/sign-in.html
+++ b/sign-in.html
@@ -11,7 +11,7 @@
     <body>
         <!-- Nav -->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
-            <a href="/" class="navbar-brand">Elm Narrative Engine Platform</a>
+            <a href="index.html" class="navbar-brand">Elm Narrative Engine Platform</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -50,8 +50,8 @@
           // See https://github.com/firebase/firebaseui-web
           var ui = new firebaseui.auth.AuthUI(firebase.auth());
           ui.start('#sign-in', {
-            signInSuccessUrl: window.location.origin + "/projects.html",
-            signInOptions: [
+            signInSuccessUrl: location.href.slice(0, location.href.lastIndexOf('/') + 1) + "projects.html",
+              signInOptions: [
               firebase.auth.GoogleAuthProvider.PROVIDER_ID,
               //firebaseui.auth.AnonymousAuthProvider.PROVIDER_ID
             ]
@@ -59,7 +59,7 @@
 
           firebase.auth().onAuthStateChanged(function(user) {
             if (user) {
-              window.location.href = window.location.origin + "/projects.html";
+              window.location.href = location.href.slice(0, location.href.lastIndexOf('/') + 1) + "projects.html";
             }
           });
         </script>
