--- a/edit.html
+++ b/edit.html
@@ -48,20 +48,62 @@
                     <a class="nav-link" id="rules-tab" data-toggle="tab" href="#rules" role="tab" aria-controls="rules" aria-selected="false">Rules</a>
                 </li>
                 <li id="save-indicator" class="small fade ml-auto mr-auto px-3 py-2"></li>
-                <button id="preview-button" class="nav-item nav-link btn btn-sm text-primary ml-auto mr-0">Preview</button>
+                <li class="nav-item ml-auto ">
+                    <a class="nav-link" id="settings-tab" data-toggle="tab" href="#settings" role="tab" aria-controls="settings" aria-selected="false">Settings</a>
+                </li>
+                <button id="preview-button" class="nav-item nav-link btn text-primary mr-0">Preview</button>
                 <button class="nav-item nav-link btn btn-sm text-secondary mr-0" data-toggle="modal" data-target="#cheatsheetModal">Cheat Sheet</button>
             </ul>
 
             <div class="tab-content" id="myTabContent">
+                <!-- entities -->
                 <div class="tab-pane fade show active" id="manifest" role="tabpanel" aria-labelledby="manifest-tab">
-                    <!-- entities table -->
                     <div id="manifest-table" class="mb-1"></div>
                     <button id="add-row-entities" type="button" class="btn btn-primary">Add Entity</button>
                 </div>
+
+                <!-- rules table -->
                 <div class="tab-pane fade" id="rules" role="tabpanel" aria-labelledby="rules-tab">
-                    <!-- rules table -->
                     <div id="rules-table"class="mb-1"></div>
                     <button id="add-row-rules" type="button" class="btn btn-primary">Add Rule</button>
+                </div>
+
+                <!-- settings -->
+                <div class="tab-pane fade" id="settings" role="tabpanel" aria-labelledby="settings-tab">
+                    <h3>Project settings</h3>
+                    <form>
+                        <div class="form-group row">
+                            <label for="projectName" class="col-sm-2 col-form-label">Name</label>
+                            <div class="col-sm-10">
+                                <input type="text" class="form-control" id="projectName">
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label for="projectDescription" class="col-sm-2 col-form-label">Description</label>
+                            <div class="col-sm-10">
+                                <input type="text" class="form-control" id="projectDescription">
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label for="projectCollaborators" class="col-sm-2 col-form-label">Collborators (comma separated emails)</label>
+                            <div class="col-sm-10">
+                                <input type="text" class="form-control" id="projectCollaborators">
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-sm-2 col-form-label" for="projectPublic">Public?</label>
+                            <div class="col-sm-10">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" id="projectPublic">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <div class="col-sm-10">
+                                <button id="save-settings" type="submit" class="btn btn-primary">Save</button>
+                            </div>
+                        </div>
+                    </form>
                 </div>
             </div>
             <em id="cloud-status" class="small float-right text-warning">Offline</em>
@@ -133,7 +175,7 @@ DO: PLAYER.current_location=CAVE.fear+1
         <script src="editor.js"></script>
         <script src="completion.js"></script>
         <script>
-          window.onAuth = ENE.Editor.init;
+            window.onAuth = ENE.Editor.init;
         </script>
     </body>
 </html>
