rules and manifest edits sync in realtime

--- a/edit.html
+++ b/edit.html
@@ -175,7 +175,7 @@ DO: PLAYER.current_location=CAVE.fear+1
         <script src="editor.js"></script>
         <script src="completion.js"></script>
         <script>
-            window.onAuth = ENE.Editor.init;
+            window.onAuth = window.ENE.Editor.init;
         </script>
     </body>
 </html>
