--- a/edit.html
+++ b/edit.html
@@ -30,7 +30,7 @@
                     <a class="nav-item nav-link" href="http://elmnarrativeengine.com/">About</a>
                     <a class="nav-item nav-link" href="https://package.elm-lang.org/packages/jschomay/elm-narrative-engine/latest/">Documentation</a>
                     <div class="border-left border-light ml-2 pl-2 d-none" id="user-profile">
-                      <a href="projects.html"><img width="40" height="40" class="rounded-circle" /></a>
+                      <a href="index.html"><img width="40" height="40" class="rounded-circle" /></a>
                       <a id="sign-out" class="nav-item nav-link d-inline" href="javascript:void(0)">Sign out</a>
                     </div>
                 </div>
