--- a/sign-in.html
+++ b/sign-in.html
@@ -28,8 +28,8 @@
           <h2>Sign In</h2>
 
 
-          <div class="alert alert-primary" role="alert">
-            Sign in to create you own projects and collaborate with others!
+          <div class="alert alert-info" role="alert">
+            Sign in to access your projects from any computer and collaborate on projects.
           </div>
 
           <em id="cloud-status" class="small float-right text-warning">Offline</em>
