fix anon auth flow bug and add more auth providers
bug: new project would always start start anon auth flow
added email link and github auth providers

--- a/sign-in.html
+++ b/sign-in.html
@@ -50,10 +50,15 @@
           // See https://github.com/firebase/firebaseui-web
           var ui = new firebaseui.auth.AuthUI(firebase.auth());
           ui.start('#sign-in', {
-            signInSuccessUrl: location.href.slice(0, location.href.lastIndexOf('/') + 1) + "index.html",
+              signInSuccessUrl: location.href.slice(0, location.href.lastIndexOf('/') + 1) + "index.html",
               signInOptions: [
-              firebase.auth.GoogleAuthProvider.PROVIDER_ID
-            ]
+                  firebase.auth.GoogleAuthProvider.PROVIDER_ID,
+                  firebase.auth.GithubAuthProvider.PROVIDER_ID,
+                  {
+                      provider: firebase.auth.EmailAuthProvider.PROVIDER_ID ,
+                      signInMethod: firebase.auth.EmailAuthProvider.EMAIL_LINK_SIGN_IN_METHOD
+                  },
+              ]
           });
 
           firebase.auth().onAuthStateChanged(function(user) {
